acvus-mir-test/tests/snapshots/all__e2e__script_let_assign.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     1 |   assign x = 1 (r0)
     3 |   assign x = 2 (r1)
     4 |   r2 = take x
     5 |   return r2

    ; r0 (v1) : i64
    ; r1 (v3) : i64
    ; r2 (x) : i64
    ; r3 (x) : i64
