acvus-mir-test/tests/snapshots/all__e2e__script_while_loop.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = fetch @n
     1 |   assign @n = r0
     2 |   jump L0
     3 | L0:
     4 |   r1 = take @n
     6 |   r2 = r1 > 0 (r3)
     7 |   jump_if r2 then L1 else L2
     8 | L1:
     9 |   r4 = take @n
    11 |   r5 = r4 - 1 (r6)
    12 |   assign @n = r5
    13 |   jump L0
    14 | L2:
    16 |   r7 = take @n
    17 |   commit @n = r7
    18 |   return () (r8)

    ; r0 (@n) : i64
    ; r1 (@n) : i64
    ; r2 (v5) : Bool
    ; r3 (v4) : i64
    ; r4 (@n) : i64
    ; r5 (v8) : i64
    ; r6 (v7) : i64
    ; r7 (v10) : i64
    ; r8 (v9) : Unit
    ; r9 (@n) : i64
