acvus-mir-test/tests/snapshots/all__e2e__simple_match_binding.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== literals ===
  T0 = ""

=== main ===
     0 |   r0 = undef
     1 |   r1 = fetch @name
     2 |   assign @name = r1
     4 |   assign <template> = T0
     5 |   r2 = ref &@name
     6 |   r3 = ref &mut <template>
     7 |   append r3 r2
     8 |   r4 = take <template>
     9 |   r5 = take @name
    10 |   commit @name = r5
    11 |   return r4

    ; r0 (v11) : &String
    ; r1 (@name) : String
    ; r2 (@name.) : &String
    ; r3 (<template>.) : &mut String
    ; r4 (v9) : String
    ; r5 (v10) : String
    ; r6 (x) : &String
    ; r7 (v3) : String
    ; r8 (x) : &String
    ; r9 (@name) : String
    ; r10 (<template>) : String
