acvus-mir-test/tests/snapshots/all__e2e__sroa_context_chain_destructure.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = undef
     1 |   r1 = fetch @a
     2 |   assign @a = r1
     3 |   r2 = fetch @b
     4 |   assign @b = r2
     5 |   r3 = fetch @c
     6 |   r4 = take @b.a
     7 |   assign @a = r4
     9 |   r6 = object {val: 0 (r5)}
    10 |   r7 = object {a: r6}
    11 |   assign @b = r7
    12 |   r8 = take @a.val
    13 |   r9 = take @a
    14 |   commit @a = r9
    15 |   r10 = take @b
    16 |   commit @b = r10
    17 |   commit @c = r8
    18 |   return r8

    ; r0 (v16) : i64
    ; r1 (@a) : {val: i64}
    ; r2 (@b) : {a: {val: i64}}
    ; r3 (@c) : i64
    ; r4 (@b.a) : {val: i64}
    ; r5 (v8) : i64
    ; r6 (v9) : {val: i64}
    ; r7 (v10) : {a: {val: i64}}
    ; r8 (@a.val) : i64
    ; r9 (v13) : {val: i64}
    ; r10 (v14) : {a: {val: i64}}
    ; r11 (@b) : {a: {val: i64}}
    ; r12 (@a) : {val: i64}
    ; r13 (@c) : i64
    ; r14 (v15) : i64
    ; r15 (@c) : i64
