acvus-mir-test/tests/snapshots/all__e2e__sroa_context_destructure_field_to_context.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = undef
     1 |   r1 = fetch @b
     2 |   assign @b = r1
     3 |   r2 = take @b.x
     4 |   commit @a = r2
     5 |   r3 = take @b
     6 |   commit @b = r3 (not written)
     7 |   return r2

    ; r0 (v9) : i64
    ; r1 (@b) : {x: i64}
    ; r2 (@b.x) : i64
    ; r3 (v8) : {x: i64}
    ; r4 (@b) : {x: i64}
    ; r5 (v7) : i64
    ; r6 (@a) : i64
    ; r7 (@a) : i64
