acvus-mir-test/tests/snapshots/all__e2e__sroa_context_field_read_1depth.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = fetch @obj
     1 |   assign @obj = r0
     2 |   r1 = take @obj.name
     3 |   r2 = take @obj
     4 |   commit @obj = r2 (not written)
     5 |   return r1

    ; r0 (@obj) : {name: String}
    ; r1 (@obj.name) : String
    ; r2 (v4) : {name: String}
    ; r3 (@obj) : {name: String}
