acvus-mir-test/tests/snapshots/all__e2e__sroa_context_field_read_2depth.snap
---
source: acvus-mir-test/tests/e2e.rs
expression: ir
---
=== main ===
     0 |   r0 = fetch @obj
     1 |   assign @obj = r0
     2 |   r1 = ref &@obj.a.b
     3 |   r2 = call #0(r1)
     4 |   r3 = take @obj
     5 |   commit @obj = r3 (not written)
     6 |   return r2

    ; r0 (@obj) : {a: {b: i64}}
    ; r1 (@obj.a.b) : &i64
    ; r2 (to_string(...)) : String
    ; r3 (v5) : {a: {b: i64}}
    ; r4 (@obj) : {a: {b: i64}}
